Add new home/back buttons to standard error page

Adds new buttons to go back (if navigation is not locked down)
and return to the home page (the overview or the configured
homepage-url if its corresponding gsetting is defined).

https://bugzilla.gnome.org/show_bug.cgi?id=705180